[package]
name = "runway"
version = "0.1.0"
edition = "2024"
description = "Generic backend server library for modular API services"
license = "MIT"

[dependencies]
# HTTP server
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Routing
matchit = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Auth (JWT validation only - password hashing is module responsibility)
jsonwebtoken = "9"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
schemars = { version = "1", features = ["uuid1", "jiff02"] }
jiff = { version = "0.2", features = ["serde"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"

# Database (Turso/libSQL)
libsql = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
base64 = "0.22"
